modidied mako notifications

--- a/mako.ini
+++ b/mako.ini
@@ -1,11 +1,12 @@
 text-color=#CECDC3
-border-color=#4385BE
-background-color=#100F0F
+border-color=#4385BE80
+background-color=#100F0F01
 width=420
 height=110
-padding=10
+padding=20,5
 border-size=2
-font=Liberation Sans 11
+border-radius=15
+font=CaskaydiaMono Nerd Font 10
 anchor=top-right
 outer-margin=20
 default-timeout=5000
